Add PATH-based shrink launcher and simplify Helix setup